# SnakeAI

./: CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  config.h.in  main.cpp
src/RL/: action.h  agent.cpp  agent.h  environment.cpp  environment.h  learningmethod.cpp  learningmethod.h  main.cpp  qlearning.cpp  qlearning.h  snakeactions.cpp  snakeactions.h  snakeagent.cpp  snakeagent.h
src/gui/: CMakeLists.txt
src/snake/: snakeengine.cpp  snakeengine.h  snakeutils.h
